# haskell-playground

./: .gitignore  .hlint.yaml  README.md  cabal.project.local  haskell-playground.cabal
app/: Main.hs
manage/: reload_repl_on_change
manage/utils/: reload_repl
src/: ExceptionHandling.hs  ExplorePrelude.hs  MyLib.hs  Tree.hs  Utils.hs
test/: ExceptionHandlingTest.hs  ExplorePreludeTest.hs  JsonTest.hs  Main.hs  MyLibTest.hs  RegexTest.hs  TimeTest.hs
