cabal-version:      2.4
name:               haskell-playground
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Benjamin
maintainer:         benjamin.guy.thomas@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  ExplorePrelude

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell-playground
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        haskell-playground

    hs-source-dirs:   app
    default-language: Haskell2010

common common-test
    default-language:    Haskell2010
    hs-source-dirs:      test, src

    build-depends:       base ^>=4.14.3.0
                       , hspec
                       , template-haskell
                       , raw-strings-qq

    default-extensions:  NumericUnderscores
                       , QuasiQuotes


test-suite explore-prelude-test
    import:              common-test
    type:                exitcode-stdio-1.0
    main-is:             ExplorePreludeTest.hs



