cabal-version:      2.4
name:               haskell-playground
version:            0.0.0.1

library
    default-language: Haskell2010
    hs-source-dirs:   src
    build-depends:    base ^>=4.14.3.0
    exposed-modules:  ExplorePrelude

executable haskell-playground
    default-language: Haskell2010
    hs-source-dirs:   app

    build-depends:
        base ^>=4.14.3.0,
        haskell-playground

    main-is:          Main.hs

test-suite haskell-playground-test
    type:                exitcode-stdio-1.0
    default-language:    Haskell2010
    hs-source-dirs:      test, src

    build-depends:       base ^>=4.14.3.0
                       , hspec
                       , template-haskell
                       , raw-strings-qq
                       , pcre-heavy

    default-extensions:  NumericUnderscores
                       , QuasiQuotes

    main-is:             Main.hs

    other-modules:       ExplorePrelude
                       , ExplorePreludeTest
                       , RegexTest