cabal-version:      2.4
name:               haskell-playground
version:            0.0.0.1

common ghc-options
    ghc-options:      -Wall
                      -freverse-errors

library
    import:           ghc-options
    default-language: Haskell2010
    hs-source-dirs:   src
    build-depends:    base ^>=4.14.3.0
    exposed-modules:  ExplorePrelude

executable haskell-playground
    import:           ghc-options
    default-language: Haskell2010
    hs-source-dirs:   app

    build-depends:
        base ^>=4.14.3.0,
        haskell-playground

    main-is:          Main.hs

test-suite haskell-playground-test
    import:              ghc-options
    type:                exitcode-stdio-1.0
    default-language:    Haskell2010
    hs-source-dirs:      test, src

    build-depends:       base ^>=4.14.3.0
                       , hspec
                       , template-haskell
                       , raw-strings-qq
                       , pcre-heavy
                       , time
                       , time-lens
                       , aeson
                       , bytestring

    default-extensions:  NumericUnderscores
                       , QuasiQuotes

    main-is:             Main.hs

    other-modules:       ExplorePrelude
                       , ExplorePreludeTest
                       , RegexTest
                       , ExceptionHandling
                       , ExceptionHandlingTest
                       , TimeTest
                       , JsonTest